--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,30 +29,27 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  lottie: ^1.4.3
+  flutter_native_splash: ^2.2.10+1
+  freezed_annotation: ^2.1.0
+  go_router: ^5.0.5
   http: ^0.13.5
+  lottie: ^1.4.3
+  readmore: ^2.2.0
   url_launcher: ^6.1.6
 
 dev_dependencies:
+  build_runner: ^2.2.1
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  freezed: ^2.1.1
+  json_serializable: ^6.5.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
   # The following line ensures that the Material Icons font is
@@ -66,14 +63,11 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/local_restaurant.json
-    - assets/loading_lottie.json
-
+    - assets/lottie/loading_lottie.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
