--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
-  dio: ^4.0.6
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.2.10+1
@@ -38,6 +37,7 @@ dependencies:
   go_router: ^5.0.5
   http: ^0.13.5
   lottie: ^1.4.3
+  provider: ^6.0.4
   readmore: ^2.2.0
   url_launcher: ^6.1.6
 
