--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^2.2.10+1
   freezed_annotation: ^2.1.0
+  get: ^4.6.5
   go_router: ^5.0.5
   google_fonts: ^3.0.1
   http: ^0.13.5
