--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/local_restaurant.json
-    - assets/lottie
+    - assets/lottie/loading_lottie_2.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
