--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^3.0.1
   http: ^0.13.5
   lottie: ^1.4.3
+  modal_bottom_sheet: ^2.1.2
   provider: ^6.0.4
   readmore: ^2.2.0
   url_launcher: ^6.1.6
