feat : add search page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ flutter:
   assets:
     - assets/local_restaurant.json
     - assets/lottie/loading_lottie_2.json
+    - assets/lottie/not_found_lottie.json
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
