feat : change at android manifest

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  android_alarm_manager_plus: ^2.1.0
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
@@ -41,6 +42,7 @@ dependencies:
   modal_bottom_sheet: ^2.1.2
   provider: ^6.0.4
   readmore: ^2.2.0
+  shared_preferences: ^2.0.15
   url_launcher: ^6.1.6
 
 dev_dependencies:
