--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider: ^6.0.4
   readmore: ^2.2.0
   shared_preferences: ^2.0.15
+  sqflite: ^2.2.0+2
   url_launcher: ^6.1.6
 
 dev_dependencies:
