--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.5
   google_fonts: ^3.0.1
   http: ^0.13.5
+  intl: ^0.17.0
   lottie: ^1.4.3
   modal_bottom_sheet: ^2.1.2
   provider: ^6.0.4
