--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.5
   intl: ^0.17.0
   lottie: ^1.4.3
+  mockito: ^5.3.2
   modal_bottom_sheet: ^2.1.2
   provider: ^6.0.4
   readmore: ^2.2.0
