--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^12.0.3
   flutter_native_splash: ^2.2.10+1
   freezed_annotation: ^2.1.0
   get: ^4.6.5
@@ -44,6 +45,7 @@ dependencies:
   modal_bottom_sheet: ^2.1.2
   provider: ^6.0.4
   readmore: ^2.2.0
+  rxdart: ^0.27.5
   shared_preferences: ^2.0.15
   sqflite: ^2.2.0+2
   url_launcher: ^6.1.6
